tests/fixtures/invalid/float_subscript.py
# Float does not support subscript operation
x: float = 1.5
y: float = x[0]
